--- a/style.css
+++ b/style.css
@@ -23,15 +23,24 @@ nav{
 .nav-right{
     display: flex;
     align-items: center;
+    width: 60%;
+    justify-content: space-between;
 }
 
 .list{
     list-style: none;
+    width: 65%;
     display: flex;
+    justify-content: space-between;
+}
+
+.list a{
+    text-decoration: none;
 }
 
 .list-items{
-    margin-right: 2em;
+    margin-right: 50%;
+    color: #fff;
 }
 
 .item-active{
@@ -43,8 +52,11 @@ nav{
 .btn{
     color: #fff;
     background-color: #1BBCEF;
-    padding: 1em 3em;
+    padding: 2% 4%;
     margin-right: 5em;
+    margin-left: 1em;
+    outline: none;
+    border: none;
 }
 
 /* Hero */
@@ -125,7 +137,7 @@ nav{
 /* card */
 
 .card{
-    margin: 1em 10em;
+    margin: 1em 10%;
 }
 
 .card .heading{
@@ -134,6 +146,8 @@ nav{
 
 .card-container{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 3em;
 }
 
@@ -167,6 +181,8 @@ nav{
     align-items: center;
     box-shadow: 5px 5px 5px 5px #C3C3C3;
     border-radius: 15px;
+
+    width: 230px;
 }
 
 .cards .description{
@@ -178,4 +194,63 @@ nav{
     padding-top: 1em;
     text-align: center;
     border-radius: 15px;
+}
+
+@media (max-width:940px) {
+    .list{
+        display: none;
+    }
+
+    .logo{
+        margin: 2em 5%;
+    }
+
+    .btn{
+        position: absolute;
+        right: -.5em;
+        
+    }
+
+    nav::after {
+        font-family: "Font Awesome 6 Free";
+        font-weight: 900;
+        display: block;
+        content: "\f0c9";
+        position: absolute;
+        right: 2em;
+        top: 2.5em;
+      }
+
+    /* hero */
+    .hero{
+        flex-direction: column;
+    }
+
+    .hero-left,
+    .hero-right{
+        width: 100%;
+    }
+    .hero-left{
+        margin: 0 1em;
+    }
+
+    .hero-heading{
+        font-size: 2.5rem;
+    }
+
+    /* main */
+    .main{
+        flex-direction: column;
+    }
+
+    .main-left,
+    .main-right{
+        width: 100%;
+    }
+
+    .main-right{
+        order: -10;
+        margin: 0 1em;
+    }
+
 }
